[package]
name = "rtiaw-rust"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1.8.0"
gl = "0.14.0"
glfw = "0.45.0"
glm = "0.2.3"
lazy_static = "1.4.0"
random_choice = "0.3.2"
